--- a/clang-tools-extra/clang-tidy/hooks/CMakeLists.txt
+++ b/clang-tools-extra/clang-tidy/hooks/CMakeLists.txt
@@ -9,6 +9,7 @@ add_clang_library(clangTidyHooksModule
   AccountConvPureCheck.cpp
   ArrayBufLenCheck.cpp
   BurdenPrereqCheck.cpp
+  ControlStringArgCheck.cpp
   DetailBufLenCheck.cpp
   DetailPrereqCheck.cpp
   EmitBufLenCheck.cpp
