Added guard call with non-const integer param checker, updated for loop guard docs.

--- a/clang-tools-extra/clang-tidy/hooks/CMakeLists.txt
+++ b/clang-tools-extra/clang-tidy/hooks/CMakeLists.txt
@@ -28,6 +28,7 @@ add_clang_library(clangTidyHooksModule
   FloatOnePureCheck.cpp
   FloatPureCheck.cpp
   FuncAddrTakenCheck.cpp
+  GuardCallNonConstCheck.cpp
   GuardCalledCheck.cpp
   GuardInForCheck.cpp
   GuardInWhileCheck.cpp
